# mycellium

./: .gitignore  README.md  mnemos.toml  pyproject.toml  start.sh
examples/: basic_session.py  langgraph_integration.py
mycelium/: __init__.py  budget.py  config.py  core.py  decay.py  dream.py  encoder.py  models.py  ollama.py  prompts.py  reconsolidation.py  session.py  store.py  structured_outputs.py
planning/: prd.md  spec.md
server/: main.py  runtime.py
server/api/: memory.py  sessions.py
tests/: test_decay.py  test_dream.py  test_encoder.py  test_ollama_client.py  test_reconsolidation.py  test_runtime.py  test_session.py  test_store.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/components/: Avatar.tsx  Chat.tsx  LogExplorer.tsx  Sidebar.tsx  SporeBackground.tsx  WikiExplorer.tsx
ui/src/components/avatars/: ClassicAvatar.tsx  MycoAvatar.tsx  index.ts
