[project]
name = "mycelium-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nsadras", email = "nitin.sadras@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "fastapi>=0.136.1",
    "gitpython>=3.1",
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mycelium"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.15.12",
]
